Adding IsAdmin Policy

--- a/Moteling.WEB/Views/_ViewImports.cshtml
+++ b/Moteling.WEB/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Moteling.WEB
+@using Moteling.WEB.Extension
 @using Moteling.WEB.Models
 @using Moteling.WEB.Models.AccountViewModels
 @using Moteling.WEB.Models.ManageViewModels
