--- a/Moteling.WEB/Views/Shared/_LoginPartial.cshtml
+++ b/Moteling.WEB/Views/Shared/_LoginPartial.cshtml
@@ -1,19 +1,21 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using Moteling.WEB.Extension
-@using Moteling.WEB.Models
-
-@inject SignInManager<ApplicationUser> SignInManager
+﻿@inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
 @if (SignInManager.IsSignedIn(User))
 {
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
-            <li>
-                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @User.UserName()!</a>
-            </li>
-            <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@User.UserName() <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    @if (User.IsAdmin())
+                    {
+                        <li><a href="#">Users</a></li>
+                    }
+                    <li><a href="#">Settings</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a  href="javascript:document.getElementById('logoutForm').submit()">Log out</a></li>
+                </ul>
             </li>
         </ul>
     </form>
