--- a/Moteling.WEB/Views/_ViewImports.cshtml
+++ b/Moteling.WEB/Views/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using Moteling.WEB.Models
 @using Moteling.WEB.Models.AccountViewModels
 @using Moteling.WEB.Models.ManageViewModels
+@using Moteling.WEB.ViewModels.Account
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
