--- a/Moteling.WEB/Views/Account/Index.cshtml
+++ b/Moteling.WEB/Views/Account/Index.cshtml
@@ -7,6 +7,10 @@
 <div class="row">
     <div class="col-sm-12">
         <h3 class="text-center">@ViewData["Title"]</h3>
+        <hr />
+        <br />
+        
+        <a asp-controller="Account" asp-action="Register" class="btn btn-default">Register User</a>
         <table class="table table-responsive table-striped">
             <thead>
                 <tr>
@@ -18,7 +22,7 @@
                 @foreach(var user in Model)
                 {
                     <tr>
-                        <td>@Html.DisplayText(user.FullName)</td>
+                        <td>@user.FullName</td>
                         <td>
                             <a asp-controller="Account" asp-action="Edit" asp-route-id="@user.Id">Edit</a><span> | </span>
                             <a asp-controller="Account" asp-action="Delete" asp-route-id="@user.Id">Delete</a>
